tests/eval/exp/bad/builtin-overflow12.scilexp
(* Expected result: Underflow *)
let f =
  fun (a : Int256) =>
  fun (b : Int256) =>
	  builtin sub a b
in
(* Int256.int_min = -57896044618658097711785492504343953926634992332820282019728792003956564819968  *)
let a = Int256 57896044618658097711785492504343953926634992332820282019728792003956564819967 in
let b = Int256 -2 in
(* a * b *)
f a b
